--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:layout_gravity="center"
             android:textColor="#fff"
             android:textSize="30dp"
-            android:text="Where is my moon?"
+            android:text="@string/where_is_my_moon"
 
             />
 
@@ -42,7 +42,7 @@
             android:layout_gravity="center"
             android:textColor="#fff"
             android:textSize="30dp"
-            android:text="Moon facs"
+            android:text="@string/moon_facts"
 
             />
 
