--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,48 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/RelativeComplet"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/RelativeComplet"
     tools:context="com.example.andresbolado.whereismymoon.MainActivity">
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="257dp"
         android:id="@+id/layout1"
+        android:layout_width="match_parent"
+        android:layout_height="171dp"
         android:layout_alignParentTop="true"
-        android:background="#000000"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:background="#000000">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:layout_gravity="center"
+            android:gravity="center"
+            android:text="Where is my moon?"
             android:textColor="#fff"
             android:textSize="30dp"
-            android:text="@string/where_is_my_moon"
 
             />
 
     </FrameLayout>
+
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="257dp"
         android:id="@+id/layout2"
-        android:background="#000000"
+        android:layout_width="match_parent"
+        android:layout_height="171dp"
         android:layout_below="@+id/layout1"
-        android:layout_alignParentBottom="true"
-        >
+        android:background="#000000">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:layout_gravity="center"
+            android:gravity="center"
+            android:text="Moon facts"
             android:textColor="#fff"
             android:textSize="30dp"
-            android:text="@string/moon_facts"
+
+            />
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/layout3"
+        android:layout_width="match_parent"
+        android:layout_height="171dp"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/layout2"
+        android:background="#000000">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="Stories of The Moon"
+            android:textColor="#fff"
+            android:textSize="30dp"
 
             />
 
